# tools

awk/: allocations_prov.csv  centreCount.awk  centreCount700.awk  firstPerCentreSession.awk  links.txt
awk/lab02_180484/: lab02.sh
bash/: dayOfWeek.sh  dayOfWeek2.sh  dayOfWeek3.sh  dayOfWeek4.sh  links.txt
lec_yacc/: lex_yacc_tutorial.pptx
lec_yacc/Calculator/: calc_grammar.y  calc_scan.l
lec_yacc/lab03_180484/: calc_grammar.y  calc_scan.l
makefile/180484_GeomPkg/: Makefile
makefile/180484_GeomPkg/include/: donut.h
makefile/180484_GeomPkg/src/: donut.c  test.c
makefile/GeomPkg_v1/: circle.c  circle.h  geometry.c  triangle.c  triangle.h
makefile/GeomPkg_v2/: circle.h  geometry.c  triangle.c
makefile/GeomPkg_v3/: Makefile  Makefile.1  Makefile.3  Makefile.5  Makefile.6
makefile/GeomPkg_v3/include/: circle.h
makefile/GeomPkg_v3/src/: circle.c
makefile/GeomPkg_v4/: Makefile  Makefile.2  Makefile.3  Makefile.4  Makefile.5  Makefile.6  Makefile.7  Makefile.8
makefile/GeomPkg_v4/include/: circle.h
makefile/GeomPkg_v4/src/: geometry.c
makefile/GeomPkg_v5/: configure.ac  running-autoconf
makefile/GeomPkg_v5/src/: Makefile.am
sql/sql_demo/: create.sql  insert.sql  insert2.sql  queries.sql  students.csv  students.sql
